# domino

./: .dockerignore  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile-airflow-domino-base-dev  Dockerfile-airflow-domino-base-prod  Dockerfile-airflow-domino-compose-worker  Dockerfile-airflow-domino-pod-dev  Dockerfile-airflow-domino-pod-gpu  Dockerfile-airflow-domino-pod-prod  Dockerfile-airflow-domino.dev  Dockerfile-airflow-domino.prod  Dockerfile-domino-piece.dev  Dockerfile-domino-piece.gpu-dev  Dockerfile-domino-piece.gpu-prod  Dockerfile-domino-piece.prod  Dockerfile-example-custom-pod-image  LICENSE  README-dev.md  README-pypi.md  README.md  artifacthub-repo.yml  docker-compose-dev.yaml  index.yaml  oldsetup.py  package.json  pyproject.toml  requirements-airflow.txt  requirements-docs.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-docs-report.yml  2-feature-request.yml  config.yml  🐛-bug-report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: helm-release.yaml  integration-tests-api.yml  release-airflow-images-dev.yaml  release-airflow-images.yaml  release-domino-py.yaml  release-frontend-dev.yaml  release-frontend.yaml  release-helm.yaml  release-rest-dev.yaml  release-rest.yaml
docs/: README.md  requirements-docs.txt
docs/source/: conf.py  index.rst
docs/source/pages/: deployment_cloud.rst  domino_components_database.rst  domino_components_frontend.rst  domino_components_gui.rst  domino_components_python_package.rst  domino_components_rest.rst  pieces.md  pieces.rst  pieces_create.rst  pieces_repository.rst  pieces_unit_testing.rst  run_local_compose.rst  run_local_kind.rst  testing_pieces_locally.md
domino/: __init__.py  base_piece.py  logger.py  task.py
domino/actions/: github_actions.py
domino/cli/: cli.py
domino/cli/utils/: config-domino-local.toml  constants.py  docker-compose.yaml  pieces_repository.py  platform.py
domino/client/: airflow_client.py  domino_backend_client.py  fs_client.py
domino/custom_operators/: base_operator.py  docker_operator.py  external_python_operator.py  k8s_operator.py  python_operator.py  worker_operator.py
domino/custom_operators/sidecar/: Dockerfile  README.md  mount.py  (+2 more)
domino/exceptions/: exceptions.py
domino/models/: __init__.py  output_modifier.py
domino/schemas/: container_resources.py  deploy_mode.py  display_result.py  from_upstream.py  piece_metadata.py  shared_storage.py
domino/scripts/: build_docker_images_pieces.py  docker_compose_scripts.py  piece_dry_run.py  run_piece_docker.py  run_piece_k8s.py
domino/testing/: __init__.py  dry_run.py  http_client.py  http_server.py
domino/utils/: __init__.py
frontend/: .env.production  .eslintignore  .eslintrc.json  Dockerfile  Dockerfile.compose  Dockerfile.dev  Dockerfile.dev.k8s  Dockerfile.prod  Dockerfile.prod.compose  README.md  entrypoint.sh  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/docs/: project-structure.md
frontend/fonts/: OFL.txt  README.txt
frontend/public/: index.html  manifest.json
frontend/src/: index.css  index.tsx  react-app-env.d.ts
helm/: README.md
helm/domino/: Chart.yaml  values.yaml
media/: Dockerfile-example-custom-piece-image
media/diagram/: domino  domino-diagrams  unit_test
rest/: Dockerfile  README.md  alembic.ini  main.py  populate_db.py  requirements-test.txt  requirements.txt  run_migrations.sh
rest/auth/: __init__.py  base_authorizer.py  permission_authorizer.py  workspace_admin.py  workspace_authorizer.py  workspace_owner.py
rest/clients/: airflow_client.py  github_rest_client.py  local_files_client.py
rest/core/: logger.py  settings.py
rest/database/: interface.py  query.py
rest/repository/: assembled_piece_repository.py  dag_repository.py  dataset_repository.py  piece_repository.py  piece_repository_repository.py  secret_repository.py  serialized_workflow_repository.py  user_repository.py  workflow_repository.py  workspace_repository.py
rest/routers/: assembled_piece_router.py  auth_router.py  dataset_router.py  health_check_router.py  model_router.py  piece_repository_router.py  piece_router.py  secret_router.py  user_router.py  workflow_piece.py  workflow_router.py  workspace_router.py
rest/services/: assembled_piece_service.py  auth_service.py  dataset_service.py  model_service.py  piece_repository_service.py  piece_service.py  secret_service.py  user_service.py  workflow_piece.py  workflow_service.py  workspace_service.py
rest/tests/: api_test_client.py  conftest.py
rest/utils/: base_node_style.py  populate_first_user.py  routing.py  workflow_template.py
src/domino/: __init__.py  base_piece.py  logger.py  task.py  taskgroup.py
(+751 files in other folders)
