[project]
name = "domino-py"
dynamic = ["version", "readme"]
description = "Python package for Domino."
authors = [
    { name = "Luiz Tauffer", email = "luiz@taufferconsulting.com" },
    { name = "Vinicius Vaz", email = "vinicius@taufferconsulting.com" },
]
requires-python = ">=3.8"
keywords = ["domino", "airflow", "gui"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",

]
dependencies = [
    "pydantic==1.10.11",
    "tomli==2.0.1",
    "tomli-w==1.0.0",
    "PyYAML==6.0.1",
    "jsonschema==4.17.3",
    "click==8.1.3",
    "rich==12.6.0",
    "colorama==0.4.6",
]

[project.urls]
homepage = "https://github.com/Tauffer-Consulting/domino"
documentation = "https://tauffer-consulting.github.io/domino-docs/"
repository = "https://github.com/Tauffer-Consulting/domino"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
domino = [
    'cli/utils/config-domino-local.toml',
    'cli/utils/docker-compose.yaml',
    'custom_operators/sidecar/sidecar_lifecycle.sh',
    'custom_operators/sidecar/rclone.conf',
    'custom_operators/sidecar/fuse.conf',
    'VERSION',
]

[tool.setuptools.dynamic]
version = { attr = "domino.__version__" }
readme = { file = 'README.md', content-type = 'text/markdown' }

[project.scripts]
domino = "domino.cli.cli:cli"

[project.optional-dependencies]
piece = ["bottle==0.12.25"]
cli = [
    "urllib3== 1.26.15",
    "cryptography==39.0.1",
    "pyOpenSSL==23.1.1",
    "PyGithub==1.55",
    "docker>=6.0.1",
    "kubernetes==23.6.0",
]
airflow = [
    "apache-airflow==2.6.3",
    "apache-airflow-providers-cncf-kubernetes==5.0.0",
    "apache-airflow-providers-docker==3.6.0",
]
full = [
    "bottle==0.12.25",
    "urllib3== 1.26.15",
    "cryptography==39.0.1",
    "pyOpenSSL==23.1.1",
    "PyGithub==1.55",
    "docker>=6.0.1",
    "kubernetes==23.6.0",
    "apache-airflow==2.6.3",
    "apache-airflow-providers-cncf-kubernetes==5.0.0",
    "apache-airflow-providers-docker==3.6.0",
]
